<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.firstapp.navigation_drawer_task.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.firstapp.navigation_drawer_task.ui.callcontacts.CallcontatcsFragment"
        android:label="@string/menu_contatcs"
        tools:layout="@layout/fragment_callcontatcs" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.firstapp.navigation_drawer_task.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />



    <fragment
        android:id="@+id/nav_calllogs1"
        android:name="com.firstapp.navigation_drawer_task.ui.calllog.CallLogFragment"
        android:label="@string/menu_callogs1"
        tools:layout="@layout/fragment_call_log" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.firstapp.navigation_drawer_task.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>